<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_start"
        android:title="@string/item_start"
        android:icon="@drawable/ic_store"
        />
    <item
        android:id="@+id/item_mis_anuncios"
        android:title="@string/item_mis_anuncios"
        android:icon="@drawable/ic_my_own"
        />
    <item
        android:id="@+id/item_sell"
        android:title=""
        android:enabled="false"
        />
    <item
        android:id="@+id/item_chats"
        android:title="@string/item_chats"
        android:icon="@drawable/ic_chats"
        />
    <item
        android:id="@+id/item_cuenta"
        android:title="@string/item_cuenta"
        android:icon="@drawable/ic_account"
        />

</menu>