<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="2dp"
    android:layout_marginBottom="3dp"
    android:background="@android:color/transparent"
    android:backgroundTint="@color/naviBlack"
    app:cardCornerRadius="1dp"
    app:cardElevation="0dp"
    app:strokeColor="@android:color/transparent"
    app:strokeWidth="0dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="6dp"
        android:paddingVertical="2dp"
        app:strokeWidth="0dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/almostWhite" />


        <LinearLayout
            android:id="@+id/LLICons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Tv_condition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Tv_condition"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/IbFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favorite_icon"
                android:gravity="center_horizontal|center_vertical"
                android:rotation="10"
                android:src="@drawable/ic_no_fav" />
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageIV"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_imagen" />

        <TextView
            android:id="@+id/Tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/Tv_description"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:visibility="gone" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="@color/white">

            <TextView
                android:id="@+id/Tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/Tv_date"
                android:textColor="@color/almostWhite"
                android:textStyle="bold"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/Tv_simbol"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/Tv_price"
                android:textColor="@color/navi1"
                android:textSize="17sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/Tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:maxLines="1"
            android:text="@string/Tv_title"
            android:textColor="@color/almostWhite"
            android:textSize="12sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/Tv_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/Tv_direction"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>